fix stacksync.erb -d instead of -h

--- a/templates/stacksync.erb
+++ b/templates/stacksync.erb
@@ -1,2 +1,2 @@
 #!/bin/bash
-cd /usr/lib/stacksync/ && java -jar Stacksync.jar -h -c <%= @confdir %>
+cd /usr/lib/stacksync/ && java -jar Stacksync.jar -d -c <%= @confdir %>
